--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 *ERB Minifier*
 
-Just need to execute "rake views:precompile" and it will have effect on production environment.
+First, add "gem 'erb_minifier', :git => 'https://github.com/jasl/erb_minifier.git'" to your Gemfile, and bundle it.
+
+Second, execute "rails g erb_minifier:install" to generate initializer.
+
+Finally, execute "rake views:precompile" before starting production environment, and it will have effect.
